<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Schedule</string>
    <string name="realm_name" translatable="false">schedule.realm</string>
    <string name="schedule_notification_channel_id" translatable="false">Schedule notification channel id</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="nav_header_desc" translatable="false">Navigation header</string>

    <string name="image" translatable="false">image</string>

    <string name="material_calendar_monday">Mon</string>
    <string name="material_calendar_tuesday">Tues</string>
    <string name="material_calendar_wednesday">Wed</string>
    <string name="material_calendar_thursday">Thur</string>
    <string name="material_calendar_friday">Fri</string>
    <string name="material_calendar_saturday">Sat</string>
    <string name="material_calendar_sunday">Sun</string>

    <array name="material_calendar_day_abbreviations_array">
        <item>@string/material_calendar_sunday</item>
        <item>@string/material_calendar_monday</item>
        <item>@string/material_calendar_tuesday</item>
        <item>@string/material_calendar_wednesday</item>
        <item>@string/material_calendar_thursday</item>
        <item>@string/material_calendar_friday</item>
        <item>@string/material_calendar_saturday</item>
    </array>

    <array name="material_calendar_months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </array>

    <!-- Button -->
    <string name="button_exit">Exit</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_signin">Login</string>
    <string name="button_signup">Sign Up</string>
    <string name="button_find_password">Forgot Password</string>
    <string name="button_modify">Modify</string>
    <string name="button_next">Next</string>
    <string name="button_start">Start</string>
    <string name="button_schedule_save">Schedule save</string>
    <string name="button_yes">Yes</string>
    <string name="button_delete">Delete</string>

    <!-- Text -->
    <string name="text_add_location">Add Location</string>
    <string name="text_add_schedule">Add schedule</string>
    <string name="text_schedule_contents">Contents</string>
    <string name="text_location">Location</string>
    <string name="text_find_current_location">Finding current your location..</string>
    <string name="text_search_location">Search location</string>
    <string name="text_my_location">My location</string>
    <string name="text_schedule_calendar">Schedule Calendar</string>
    <string name="text_remember_login">Remember Login</string>
    <string name="text_time_set">Time Setting</string>
    <string name="text_hour">Hour</string>
    <string name="text_minute">Minute</string>
    <string name="text_date_all_format" translatable="false">EEE MMM dd hh:mm:ss zzz yyyy</string>
    <string name="text_date_year_month" translatable="false">yyyy-MM</string>
    <string name="text_date_year_month_day" translatable="false">yyyy-MM-dd</string>
    <string name="text_date_time" translatable="false">HH:mm</string>
    <string name="text_date_day_time" translatable="false">yyyy-MM-dd HH:mm</string>
    <string name="text_date_year_month_day_title" translatable="false">yyyy년 MM월 dd일</string>
    <string name="text_logo" translatable="false">PlayGilRound</string>
    <string name="text_schedule_desc">Schedule Desc..</string>
    <string name="text_email">E-mail</string>
    <string name="text_password">Password</string>
    <string name="text_not_account">Not yet account</string>
    <string name="text_signup">SignUp</string>
    <string name="text_choice_day">Is the date selected?</string>
    <string name="text_user_find">Find User</string>
    <string name="text_sign_in_forget_password">Do not remember your password?</string>
    <string name="text_login">Login</string>
    <string name="text_schedule_content">Please Input your work!</string>
    <string name="text_search_nickname">NickName Search</string>
    <string name="text_find_set_location">Finding set your location..</string>
    <string name="text_schedule">Schedule</string>

    <string name="text_schedule_add">Add Schedule</string>
    <string name="text_schedule_modify">Modify Schedule</string>
    <string name="text_schedule_delete">Delete Schedule</string>

    <string name="text_chatting_rome">Chat</string>

    <string name="text_tutorial_start1">일정을 등록할 때,\n 장소를 설정해주세요.</string>
    <string name="text_tutorial_start2">장소에 가까워지면\n도착 버튼이 활성화됩니다.</string>
    <string name="text_tutorial_start3">도착 버튼을 누르고\n 친구와 함께 경쟁하세요.</string>

    <!-- SignUp Text-->
    <string name="text_sign_up_title_name">이름을 입력해 주세요.</string>
    <string name="text_sign_up_title_email">이메일을 입력하세요.</string>
    <string name="text_sign_up_title_password">비밀번호를 설정해주세요.</string>
    <string name="text_sign_up_title_password_check">비밀번호를 재입력해주세요.</string>
    <string name="text_sign_up_title_nickname">닉네임을 설정해주세요.</string>
    <string name="text_sign_up_title_birth">생일을 설정해주세요.</string>

    <string name="text_sign_up_content_name">이름</string>
    <string name="text_sign_up_content_email">이메일</string>
    <string name="text_sign_up_content_password">비밀번호</string>
    <string name="text_sign_up_content_password_check">비밀번호</string>
    <string name="text_sign_up_content_nickname">닉네임</string>

    <string name="text_add_schedule_title">일정 제목을 입력해 주세요.</string>
    <string name="text_add_schedule_date">날짜가 어떻게 되나요?</string>
    <string name="text_add_schedule_member">누구와 함께 하시나요?</string>
    <string name="text_add_schedule_place">장소를 입력해주세요.</string>
    <string name="text_add_schedule_memo">메모를 작성해주세요.</string>
    <string name="text_add_schedule_map">지를 작성해주세요.</string>

    <string name="text_schedule_title">일정 제목</string>
    <string name="text_schedule_date_start">시작</string>
    <string name="text_schedule_date_end">종료</string>
    <string name="text_schedule_search_friend">친구 검색</string>
    <string name="text_schedule_place">장소</string>

    <string name="text_destination">Destination</string>
    <string name="text_my_profile">내 프로필</string>
    <string name="text_friend">친구</string>
    <string name="text_request_friend">친구 요청</string>
    <string name="text_friend_delete">친구 삭제</string>
    <string name="text_friend_attention">관심 친구</string>
    <string name="text_exit_app">Exit App?</string>
    <string name="text_request_cancel">Request Cancel</string>

    <string name="text_friend_delete_title">친구를 삭제하시겠습니까?</string>
    <string name="text_friend_delete_content">%s 님이 슬퍼하십니다.</string>
    <string name="error_text_close">Close</string>

    <string-array name="error_sign_up_field_check">
        <item>올바른 이름을 입력해주세요.</item>
        <item>이미 사용 중인 이메일입니다.</item>
        <item>패스워드는 소문자와 숫자 8자리 이상입니다.</item>
        <item>비밀번호가 일치하지 않습니다.</item>
        <item>이미 사용 중인 닉네임입니다.</item>
    </string-array>

    <string name="error_sign_in_email_filed_check">올바르지 않은 형식의 이메일입니다.</string>
    <string name="error_sign_in_password_filed_check">비밀번호를 입력해주세요.</string>
    <string name="error_sign_in_not_match_email_and_password_filed_check">이메일과 비밀번호가 일치하지 않습니다.</string>

    <string name="error_network">네트워크 연결이 불안정합니다.</string>

    <!-- Hint -->
    <string name="hint_schedule">Edit schedule.</string>
    <string name="hint_schedule_contents">Edit schedule contents.</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Password</string>
    <string name="hint_birth">Birth(19950818)</string>
    <string name="hint_nick_name">NickName</string>
    <string name="hint_name">Name</string>
    <string name="hint_nick_name_search">닉네임 검색</string>


    <string name="hint_add_schedule_title">일정 입력</string>
    <string name="hint_schedule_search_user">유저 검색</string>
    <string name="hint_add_schedule_place">장소 입력</string>
    <string name="hint_schedule_non_memo">작성하실 메모가 없으시다면\n오른쪽 하단의 버튼을 눌러주세요.</string>

    <!-- Message -->
    <string name="message_check_permission">Checking permission</string>

    <!-- Google Map-->
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBtfoWf45RbAnQ7mDul2qiW37sB5jEy_Ho</string>

    <!-- Toast -->
    <string name="toast_error_msg_find_location">Fail find location.</string>
    <string name="toast_msg_input_schedule">Please input schedule.</string>
    <string name="toast_msg_save_schedule">Save schedule</string>
    <string name="toast_msg_gps_enable">Turn on the GPS.</string>
    <string name="toast_msg_check_location">Please Check Input Location.</string>
    <string name="toast_msg_null_location">Input Location is Null.</string>
    <string name="toast_msg_user_not_found">User Not Found.</string>
    <string name="toast_msg_network_error">Network Error.</string>

    <!-- Navigation -->
    <string name="nav_calendar">Calendar</string>
    <string name="nav_friend">Friend</string>
    <string name="nav_map">Map</string>
    <string name="nav_card">Card</string>
    <string name="nav_question">Question</string>
    <string name="nav_chat">Chat</string>
    <string name="nav_setting">Setting</string>

    <!-- Tutorial Text-->
    <string-array name="tutorial_text_array">
        <item>일정을 신경 쓰지 마세요.\n 일공이 챙겨줄게요.</item>
        <item>일정을 등록할 때,\n 장소를 설정해주세요.</item>
        <item>서로의 위치를\n 실시간으로 확인해 보세요.</item>
        <item>도착했다면,\n 몇 등인지 확인해보세요.</item>
    </string-array>

    <!-- OAuth 2.0 Client ID -->
    <string name="google_web_client_id">353847811725-vemdsfmqn70ue07845ae9d1ef6src9lo.apps.googleusercontent.com</string>
    <string name="naver_web_client_id">pisCfv1CSL1QcOmikeDN</string>
    <string name="naver_web_client_pw">4DsmgefJnd</string>

    <!-- Facebook App ID -->
    <string name="facebook_app_id">2208294345872737</string>
    <string name="fb_login_protocol_scheme">fb2208294345872737</string>

    <!-- Kakao App Key -->
    <string name="kakao_app_key">afca4cbd1f0ba11a14daffadd9d96472</string>
    <string name="text_accept">수락</string>
    <string name="text_refuse">거절</string>
</resources>
