<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navCalendar"
            android:icon="@drawable/nav_calendar"
            android:title="@string/nav_calendar" />

        <item
            android:id="@+id/navFriend"
            android:icon="@drawable/nav_friend"
            android:title="@string/nav_friend" />

        <item
            android:id="@+id/navMap"
            android:icon="@drawable/nav_map"
            android:title="@string/nav_map" />

        <item
            android:id="@+id/navCard"
            android:icon="@drawable/nav_card"
            android:title="@string/nav_card" />

        <item
            android:id="@+id/navQuestion"
            android:icon="@drawable/nav_question"
            android:title="@string/nav_question" />

    </group>
</menu>