<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/calendarHeader"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="24dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="2018년 12월"
            android:textColor="@color/light_indigo"
            android:textSize="20sp"
            android:textStyle="normal" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llCalendarView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/abbreviationsBar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sundayLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/material_calendar_sunday"
                android:textColor="@color/color_gray_day" />

            <TextView
                android:id="@+id/mondayLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/material_calendar_monday"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tuesdayLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/material_calendar_tuesday"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/wednesdayLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/material_calendar_wednesday"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/thursdayLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/material_calendar_thursday"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/fridayLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/material_calendar_friday"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/saturdayLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/material_calendar_saturday"
                android:textColor="@color/color_gray_day" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.playgilround.schedule.client.calendar.CalendarViewPager
                android:id="@+id/calendarViewPager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </ScrollView>
    </LinearLayout>
</LinearLayout>
