<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvAddScheduleTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:text="@string/text_add_schedule_place"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="normal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="57dp"
        android:layout_marginStart="23dp"
        android:textColor="@color/light_indigo"
        android:textSize="12sp"
        android:text="@string/text_schedule_place"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:hint="@string/hint_add_schedule_place"
            android:imeOptions="actionDone"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            android:inputType="text"
            android:lines="1" />

</LinearLayout>