<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvAddScheduleDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:text="@string/text_add_schedule_date"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="normal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="57dp"
        android:layout_marginStart="23dp"
        android:textColor="@color/light_indigo"
        android:textSize="12sp"
        android:text="@string/text_schedule_date_start"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvStartDate"
        android:text="2019. 12. 17. 월요일 11:00"
        android:textColor="@android:color/black"
        android:textStyle="normal"
        android:layout_marginTop="8dp"
        android:layout_marginStart="33dp"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_indigo"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="4dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="23dp"
        android:textColor="@color/light_indigo"
        android:textSize="12sp"
        android:text="@string/text_schedule_date_end"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvEndDate"
        android:text="2019. 12. 17. 월요일 11:00"
        android:textColor="@android:color/black"
        android:textStyle="normal"
        android:layout_marginTop="8dp"
        android:layout_marginStart="33dp"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_indigo"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="4dp"/>

</LinearLayout>